[package]
name = "sunlight_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qapi = { version = "0.11", features = [ "qmp", "async-tokio-all" ] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = [ "full" ] }
zbus = { version = "3.11.1", features = [ "tokio" ] }
